--- a/shoppingcart-webparent/shoppingcart-frontend/src/main/resources/templates/register/register_form.html
+++ b/shoppingcart-webparent/shoppingcart-frontend/src/main/resources/templates/register/register_form.html
@@ -116,7 +116,7 @@
 				<div class="col-sm-8">
 					<input type="text" th:field="*{state}" class="form-control"
 						maxlength="45" minlength="3" list="listStates" />
-					<datalist id="listStates"></datalist>
+					<datalist id="listStates"></datalist><!-- khi bấm vào thẻ input thì nó sẽ hiển thị list states để chọn, khi chọn 1 state trong list states thì giá trị đó sẽ được gán vào nội dung của thẻ input -->
 				</div>
 			</div>
 									
