--- a/shoppingcart-webparent/shoppingcart-frontend/src/main/resources/templates/error/403.html
+++ b/shoppingcart-webparent/shoppingcart-frontend/src/main/resources/templates/error/403.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
-<head th:replace="fragments :: page_head('Error - Shopping Cart Admin', 'none')" />
+<head th:replace="fragments :: page_head('Error - Shopping Cart Client', 'none')" />
 
 <body>
 	<div class="container-fluid">
