--- a/shoppingcart-webparent/shoppingcart-frontend/src/main/resources/templates/login.html
+++ b/shoppingcart-webparent/shoppingcart-frontend/src/main/resources/templates/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments :: page_head('Shopme', 'none')" />
+<head th:replace="fragments :: page_head('Shopping Cart Client', 'none')" />
 <body>
 <div class="container-fluid text-center">
 	<div th:replace="navigation :: header_menu"></div>
