Add new features checkout/view-orders

--- a/shoppingcart-webparent/shoppingcart-frontend/src/main/resources/templates/navigation.html
+++ b/shoppingcart-webparent/shoppingcart-frontend/src/main/resources/templates/navigation.html
@@ -27,6 +27,10 @@
 				</th:block>
 				
 				<li class="nav-item">
+						<a class="nav-link" th:href="@{/orders}">Orders</a>
+				</li>
+				
+				<li class="nav-item">
 					<a class="nav-link fas fa-shopping-cart fa-2x" th:href="@{/cart}"></a>
 				</li>
 				
