--- a/shoppingcart-webparent/shoppingcart-frontend/src/main/resources/templates/fragments.html
+++ b/shoppingcart-webparent/shoppingcart-frontend/src/main/resources/templates/fragments.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0">
 
-	<title>[[${title}]] - [[${SITE_NAME}]]</title>
+	<title>[[${title}]]</title>
 	
 	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
 	<link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}" />
@@ -94,6 +94,37 @@
 		</div>
 	</div>
 </div>
+
+<div th:fragment="search_form(moduleURL)" th:remove="tag">
+	<form th:action="@{${moduleURL} + '/page/1'}" class="form-inline m-3">
+		<input type="hidden" name="sortField" th:value="${sortField}" />
+		<input type="hidden" name="sortDir" th:value="${sortDir}" />
+		
+		Filter:&nbsp;
+		<input type="search" name="keyword" th:value="${keyword}" class="form-control" required/>
+		&nbsp;&nbsp;
+		<button type="submit" class="btn btn-primary">
+			<i class="fas fa-search"></i>
+		</button>
+		&nbsp;&nbsp;
+		<button type="button" class="btn btn-secondary" onclick="clearFilter()">
+			<i class="fas fa-eraser"></i>
+		</button>
+	</form>
+</div>
+
+<th th:fragment="column_link(moduleURL, fieldName, columnLabel, removeTag)" th:remove="${removeTag}">
+	<a class="text-white"
+		th:href="@{${moduleURL} + '/page/' + ${currentPage} + '?sortField=' + ${fieldName}  +'&sortDir=' + ${sortField != fieldName ? sortDir : reverseSortDir} + ${keyword != null ? '&keyword=' + keyword : ''} + ${categoryId != null ? '&categoryId=' + categoryId : ''}}">
+		[[${columnLabel}]]
+	</a>								
+	<span th:if="${sortField == fieldName}"
+		th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}" ></span>					
+</th>
+
+<div th:fragment="format_time(dateTime)" th:remove="tag">
+	<span th:text="${#dates.format(dateTime, 'yyyy-MM-dd HH:mm:ss')}"></span>
+</div>	
 
 </body>
 </html>
